# SPBU_tasks

./: .gitignore  CMakeLists.txt  README.md
sem1/: CMakeLists.32-bit.txt  CMakeLists.64-bit.txt  CMakeLists.txt  Graphics.cpp  graphics.h  input.txt  input_h.txt  main.cpp  old.cpp  openbgi.7z  output.txt  result.txt  task10_1.c  task3_5.cpp  task3_6.cpp  task4_5.cpp  task4_6.cpp  task4_7.cpp  task5_3.cpp  task5_5.cpp  task5_6.cpp  task7.c  task7_1.cpp  task7_2.cpp  task7_3.cpp  task7_4.cpp  task7_5.cpp  task7_6.cpp  task8_1.cpp  task9_1.cpp  task9_2.cpp  task9_5.cpp  task_KR.cpp  task_h.cpp  task_h.h  test.cpp
sem2/task6_calc/: README.md  input.txt  main.cpp  stack.inc
sem2/task7_queue/: README.md  main.cpp  queue.cpp
sem2/task8_tree/: CMakeLists.txt  README.md  tree.h
sem2/task9_expr/: input.txt  link.h  stack.h  stack.inc  tree.cpp  tree.h
sem3/task1_graph/: CMakeLists.txt  graph.cpp  graph.h  main.cpp  task1.txt  utils.h
sem3/task2_iter/: main.cpp
sem3/task3_2d_iter/: CMakeLists.txt  main.cpp  main2.cpp  test.cpp
sem3/task4/: CMakeLists.txt  main.cpp
sem3/task6/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp
sem3/task7/: CMakeLists.txt  main.cpp  main2.cpp  (+1 more)
sem4/: task1.py  task2.py  task4.py  task4_2.py  task5.py
sem6/: README.md
sem7-MC/: notebook.ipynb
task6_calc/: CMakeLists.txt  README.md  input.txt  stack.h  task6.cpp  task6.h
task7_queue/: CMakeLists.txt  README.md  main.cpp  queue.cpp  queue.h
task8_tree/: CMakeLists.txt  task8.cpp  tree.cpp  tree.h
task9_expr/: CMakeLists.txt  README.md  input.txt  main.cpp  stack.h  stack.inc
(+119 files in other folders)
