cmake_minimum_required(VERSION 3.15)
project(SPBUtasks2020)

set(CMAKE_CXX_STANDARD 17)

add_executable(SPBUtasks2020 task6.cpp)
#add_executable(SPBUtasks2020 task5.cpp)
#add_executable(SPBUtasks2020 task3.cpp utils.cpp)
#target_link_libraries(SPBUtasks2020 openbgi gdi32 opengl32 freeglut glu32)
target_link_libraries(SPBUtasks2020)